More IE fixes; see http://stackoverflow.com/questions/21840551/background-size-with-svg-squished-in-ie9-10

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -7686,7 +7686,8 @@ td.platform-column-sidebar-left {
 .platform-quote {
   background-image: url("/images/ripped-paper-background.svg");
   background-position: center top;
-  background-repeat: repeat-x;
+  background-repeat: repeat no-repeat;
+  background-size: 427px 208px;
 }
 
 .platform-quote blockquote {
