--- a/client/app/styles/platform.less
+++ b/client/app/styles/platform.less
@@ -79,7 +79,8 @@
 
 .platform-quote {
   background-image: url("/images/ripped-paper-background.svg");
-  background-repeat: repeat-x;
+  background-size: 427px 208px;
+  background-repeat: repeat no-repeat;
   background-position: center top;
 
   blockquote {
